--- a/E-CommersITSense/E-Commerce.Model/E-Commerce.Model.csproj
+++ b/E-CommersITSense/E-Commerce.Model/E-Commerce.Model.csproj
@@ -58,6 +58,22 @@
     <Compile Include="Models\ECommerce\Products\Shipping.cs" />
     <Compile Include="Models\ECommerce\Products\State.cs" />
     <Compile Include="Models\ECommerce\Products\Variations.cs" />
+    <Compile Include="Models\ECommerce\Shipments\Attributes.cs" />
+    <Compile Include="Models\ECommerce\Shipments\Catalog.cs" />
+    <Compile Include="Models\ECommerce\Shipments\Condition.cs" />
+    <Compile Include="Models\ECommerce\Shipments\Free.cs" />
+    <Compile Include="Models\ECommerce\Shipments\Free_configurations.cs" />
+    <Compile Include="Models\ECommerce\Shipments\History.cs" />
+    <Compile Include="Models\ECommerce\Shipments\Logistics.cs" />
+    <Compile Include="Models\ECommerce\Shipments\Logistic_types.cs" />
+    <Compile Include="Models\ECommerce\Shipments\Modes.cs" />
+    <Compile Include="Models\ECommerce\Shipments\Rules.cs" />
+    <Compile Include="Models\ECommerce\Shipments\ShipmentsCategory.cs" />
+    <Compile Include="Models\ECommerce\Shipments\ShipmentsMethod.cs" />
+    <Compile Include="Models\ECommerce\Shipments\ShipmentsPreferences.cs" />
+    <Compile Include="Models\ECommerce\Shipments\ShipmentswithoutCategory.cs" />
+    <Compile Include="Models\ECommerce\Shipments\Shipping_attributes.cs" />
+    <Compile Include="Models\ECommerce\Shipments\Types.cs" />
     <Compile Include="Models\ECommerce\User\Address.cs" />
     <Compile Include="Models\ECommerce\User\BuyerReputation.cs" />
     <Compile Include="Models\ECommerce\Products\Buying_modes.cs" />
