--- a/E-CommersITSense/E-Commerce.Model/E-Commerce.Model.csproj
+++ b/E-CommersITSense/E-Commerce.Model/E-Commerce.Model.csproj
@@ -57,17 +57,20 @@
     <Compile Include="DAL\Controller\ECommerceDataFactory.cs" />
     <Compile Include="Interface\IECommerce.cs" />
     <Compile Include="Models\ECommerce\Products\Accepts_mercadopago.cs" />
+    <Compile Include="Models\ECommerce\Products\Attributes.cs" />
     <Compile Include="Models\ECommerce\Products\Attribute_combinations.cs" />
     <Compile Include="Models\ECommerce\Products\City.cs" />
     <Compile Include="Models\ECommerce\Products\Country.cs" />
     <Compile Include="Models\ECommerce\Products\Descriptions.cs" />
     <Compile Include="Models\ECommerce\Products\Differential_pricing.cs" />
+    <Compile Include="Models\ECommerce\Products\Free_methods.cs" />
     <Compile Include="Models\ECommerce\Products\Geolocation.cs" />
     <Compile Include="Models\ECommerce\Products\Items.cs" />
     <Compile Include="Models\ECommerce\Products\Location.cs" />
     <Compile Include="Models\ECommerce\Products\Neighborhood.cs" />
     <Compile Include="Models\ECommerce\Products\Non_mercado_pago_payment_methods.cs" />
     <Compile Include="Models\ECommerce\Products\Pictures.cs" />
+    <Compile Include="Models\ECommerce\Products\Rule.cs" />
     <Compile Include="Models\ECommerce\Products\Sale_terms.cs" />
     <Compile Include="Models\ECommerce\Products\Seller_address.cs" />
     <Compile Include="Models\ECommerce\Products\Seller_contact.cs" />
