--- a/E-CommersITSense/E-Commerce.Model/E-Commerce.Model.csproj
+++ b/E-CommersITSense/E-Commerce.Model/E-Commerce.Model.csproj
@@ -94,7 +94,6 @@
     <Compile Include="Models\ECommerce\User\BuyerReputation.cs" />
     <Compile Include="Models\ECommerce\Products\Buying_modes.cs" />
     <Compile Include="Models\ECommerce\Products\Category.cs" />
-    <Compile Include="Models\ECommerce\Products\ChildrenCategory.cs" />
     <Compile Include="Models\ECommerce\Products\PathFromRoot.cs" />
     <Compile Include="Models\ECommerce\Products\Settings.cs" />
     <Compile Include="Models\ECommerce\User\Buy.cs" />
@@ -114,11 +113,10 @@
     <Compile Include="Models\ECommerce\User\Status.cs" />
     <Compile Include="Models\ECommerce\User\Transactions.cs" />
     <Compile Include="Models\ECommerce\User\User_type.cs" />
+    <Compile Include="Models\General\Enumerations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\General\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
