--- a/E-CommersITSense/E-Commerce/packages.config
+++ b/E-CommersITSense/E-Commerce/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="bootstrap" version="4.0.0" targetFramework="net452" />
+  <package id="FontAwesome" version="4.7.0" targetFramework="net452" />
   <package id="HttpParamsUtility" version="1.0.0" targetFramework="net452" />
   <package id="jQuery" version="3.2.1" targetFramework="net452" />
   <package id="MercadoLibreSdk" version="1.0.6.0" targetFramework="net452" />
